# AzureOps-AgentHub

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: __init__.py
agents/code_generation/: __init__.py  agent.py
agents/code_generation/prompts/: code_generation_system.j2
agents/code_generation/tools/: __init__.py  devops_rest.py  git_operations.py
agents/cost_optimization/: __init__.py  agent.py
agents/cost_optimization/prompts/: cost_optimization_system.j2
agents/cost_optimization/tools/: __init__.py  cost_analyzer.py
agents/diagnostic/: __init__.py  agent.py
agents/diagnostic/prompts/: diagnostic_system.j2
agents/diagnostic/tools/: __init__.py  infra_graph.py  log_analytics.py  rag_retrieval.py
agents/governance/: __init__.py  agent.py
agents/governance/prompts/: governance_system.j2
agents/governance/tools/: __init__.py  policy_rules.py
agents/log_analysis/: __init__.py  agent.py
agents/log_analysis/prompts/: log_analysis_system.j2
agents/log_analysis/tools/: __init__.py  log_chunker.py
agents/supervisor/: agent.py  router.py
agents/supervisor/prompts/: supervisor_system.j2
core/: __init__.py
core/config/: __init__.py  policy_loader.py  settings.py
core/state/: __init__.py  schema.py
core/telemetry/: __init__.py  setup.py
core/utils/: __init__.py  ids.py  json_schemas.py  logging.py
services/: __init__.py
services/executor/: __init__.py  function_app.py
services/ingest/: __init__.py  function_app.py
services/ingest/normalizers/: __init__.py  adf.py  common.py  databricks.py  devops.py  logic_app.py  service_bus.py
services/notifier/: __init__.py  function_app.py
tests/: conftest.py
tests/e2e/: test_e2e_incident_flow.py
tests/integration/: test_agent_execution.py  test_executor_orchestration.py  test_ingest_workflows.py  test_service_bus_abstractions.py
tests/unit/: test_architecture_additional_coverage.py  test_governance_policy_evaluation.py  test_normalizers.py  test_pr_spec_generation.py  test_routing_logic.py  test_state_schema_validation.py  test_telemetry_wrappers.py
